--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Test.Test
+GameDefaultMap=/Game/Maps/GeometryBrushMap.GeometryBrushMap
 
 
-EditorStartupMap=/Game/Maps/Test.Test
+EditorStartupMap=/Game/Maps/GeometryBrushMap.GeometryBrushMap
 GlobalDefaultGameMode=/Game/Blueprints/GameMode/GM_GameJamDefault.GM_GameJamDefault_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
