--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/GameInstance/BP_EscapeGameInstance.BP_EscapeGameInstance_C
 GameDefaultMap=/Game/Maps/Level1.Level1
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Blueprints/GameMode/GM_PrisonEscapeDefault.GM_PrisonEscapeDefault_C
+GlobalDefaultGameMode=/Game/Blueprints/GameMode/GM_Start.GM_Start_C
 GlobalDefaultServerGameMode=None
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
