scalable ui update

--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/GameInstance/BP_EscapeGameInstance.BP_EscapeGameInstance_C
-GameDefaultMap=/Game/Maps/Level1.Level1
+GameDefaultMap=/Game/Maps/StartGame.StartGame
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/GameMode/GM_Start.GM_Start_C
 GlobalDefaultServerGameMode=None
@@ -81,4 +81,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
+
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+bTarget32Bit=True
 
