stupid vents dont work

--- a/Game/Config/DefaultGame.ini
+++ b/Game/Config/DefaultGame.ini
@@ -8,8 +8,8 @@ CompanyName=Cowland Game Studios
 Homepage="https://cowlandgamestudios.itch.io/"
 SupportContact="https://cowlandgamestudios.itch.io/"
 CompanyDistinguishedName=Cowland Game Studios
-ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "D6E5FA8A49913AEEEF7865BF2CBD8239", "{GameName} {BuildConfiguration}")
-ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "968E14DD449E3986C8C0269D642A7046", "{GameName} {BuildConfiguration}")
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "D6E5FA8A49913AEEEF7865BF2CBD8239", "FreeThem")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "968E14DD449E3986C8C0269D642A7046", "FreeThem {BuildConfiguration}")
 
 [StartupActions]
 bAddPacks=True
