Project settings update

--- a/Game/Config/DefaultGame.ini
+++ b/Game/Config/DefaultGame.ini
@@ -2,14 +2,14 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=4C0F61A441241E827EA666A86B5FD4A5
-Description=A escape game!
+Description=An escape game!
 ProjectName=FreeThem
 CompanyName=Cowland Game Studios
 Homepage="https://cowlandgamestudios.itch.io/"
 SupportContact="https://cowlandgamestudios.itch.io/"
 CompanyDistinguishedName=Cowland Game Studios
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "D6E5FA8A49913AEEEF7865BF2CBD8239", "FreeThem")
-ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "968E14DD449E3986C8C0269D642A7046", "FreeThem {BuildConfiguration}")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "968E14DD449E3986C8C0269D642A7046", "FreeThem")
 
 [StartupActions]
 bAddPacks=True
